fix(kanban): word wrapping

--- a/projects/kanban/src/app/board/shared/card-details/label-manager/label-manager.component.scss
+++ b/projects/kanban/src/app/board/shared/card-details/label-manager/label-manager.component.scss
@@ -16,6 +16,10 @@
     margin-bottom: 0.5rem;
   }
 
+  .text {
+    word-wrap: break-word;
+  }
+
   .search-input {
     display: block;
     width: 100%;
